[package]
name = "wobl"
version = "0.1.1"
edition = "2024"
description = "multibackend textbased game engine"
readme-file= "README.md"
license = "MIT"
repository = "https://github.com/dvdtsb/wobl"

[dependencies]
crossterm = "0.29.0"
device_query = "4.0.1"


[dependencies.sdl2]
version = "0.38.0"
default-features = false
features = ["ttf"]



[features]
default = []
crossterm_events = []

